--- a/assets/stylingcss/style.css
+++ b/assets/stylingcss/style.css
@@ -164,3 +164,72 @@ img {
     width: fit-content;
     height: fit-content;
 }
+/* ------ Landing content styling */
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2em 1em;
+    text-align: center;
+  }
+
+  .column {
+    width: 100%;
+    padding: 0.5em 0;
+  }
+  
+  .title-txt {
+    width: 100%;
+    text-align: center;
+    font-size: 3.5em;
+    color: #1f003b;
+  }
+  
+  .card {
+    box-shadow: 0 0 2.4em rgba(25, 0, 58, 0.1);
+    padding: 3.5em 1em;
+    border-radius: 0.6em;
+    color: #1f003b;
+    cursor: pointer;
+    transition: 0.3s;
+    background-color: #ffffff;
+  }
+  
+  .card .img-container {
+    width: 8em;
+    height: 8em;
+    background-color: #a993ff;
+    padding: 0.5em;
+    border-radius: 50%;
+    margin: 0 auto 2em auto;
+  }
+  
+  .card img {
+    width: 100%;
+    border-radius: 50%;
+  }
+
+  .card h3 {
+    font-weight: 500;
+  }
+  
+  .card p {
+    font-weight: 300;
+    margin: 0.5em 0 2em 0;
+    letter-spacing: 2px;
+  }
+  
+  .card a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 1.4em;
+  }
+  
+  .card:hover {
+    background: linear-gradient(#6045ea, #8567f7);
+    color: #ffffff;
+  }
+  
+  .card:hover .img-container {
+    transform: scale(1.15);
+  }
