--- a/assets/stylingcss/style.css
+++ b/assets/stylingcss/style.css
@@ -164,7 +164,7 @@ img {
     width: fit-content;
     height: fit-content;
 }
-/* ------ Landing content styling */
+/* ------ Features section styling */
 
 .row {
     display: flex;
@@ -232,4 +232,135 @@ img {
   
   .card:hover .img-container {
     transform: scale(1.15);
+  }
+
+  /* ------------ subscription page styling */
+
+#hero-txt #sub-txt {
+    color: #ffffff;
+    font-family: 'Kablammo', sans-serif;
+    font-size: xxx-large;
+    padding: 1rem;
+    text-align: center;
+}
+
+#monster-img {
+    align-items: center;
+}
+
+#monster-img img {
+    width: 50vh;
+    height: 50vh;
+    align-items: center;
+}
+
+.sub-container {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
+
+.sub-wrapper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    font-size: 0.9rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    padding: 0 1rem;
+    gap: 1.7rem;
+}
+
+.sub-card {
+   width: 20rem;
+   height: 25rem;
+   position: relative;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: #a993ff;
+   border-radius: 10px;
+   text-align: center;
+   padding: 2.5em 0;
+   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1),
+               rgba(0, 0, 0, 0.2) 0px 6px 6px;
+    transform: skewY(-8deg);
+    transition: all .2s ease-in-out; 
+}
+
+/* ------------ subscription modal*/
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 3;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  .modal-content {
+    background-color: #ad12bb;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #882198;
+    border-radius: 1rem;
+    width: 30rem; 
+    height: 15rem;
+    position: relative;
+  }
+  
+  .modal-content h3 {
+    color: #68dc64;
+    text-align: center;
+    padding-top: 2rem;
+    font-size: larger;
+  }
+
+  .modal-content p {
+    color: #68dc64;
+    text-align: center;
+    padding-top: 3rem;
+  }
+
+  .modal-content a {
+    color: #f565e9;
+    text-decoration: underline;
+  }
+
+  .close {
+    color: #000000;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  #cancel-center-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 1.5rem;
+  }
+
+  #cancel-btn {
+    width: 10rem;
+    height: 2rem;
+    color: #ffffff;
+    background: #1b8b04;
+    border: none;
+    border-radius: 1rem;
+    cursor: pointer;
   }
