review section styled

--- a/assets/stylingcss/style.css
+++ b/assets/stylingcss/style.css
@@ -364,3 +364,173 @@ img {
     border-radius: 1rem;
     cursor: pointer;
   }
+
+  /* ------------ review slider */
+
+#testimonial-container {
+    height: 100vh;
+    width: auto;
+    background-color: #7b04b6;
+    position: relative;
+}
+
+.rev-wrap {
+    background-color: white;
+    position: relative;
+    width: 80vw;
+    max-width: 41em;
+    min-height: 25em;
+    border-radius: 0.6em;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-shadow: 0 1.8em 3em rgba(1,17,39,0.15);
+    display: flex;
+}
+
+.review-container {
+    width: 90vh;
+    height: auto;
+    position: relative;
+    margin: auto;
+    padding: 1.8em 1.2em;
+    text-align: center;
+    line-height: 0.2rem;
+}
+
+.slider-btn {
+    font-size: 1.8em;
+    height: 2.2em;
+    width: 2.2em;
+    background-color: #c773d7;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    border: none;
+    color: #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 0 1em rgba(1,17,39,0.25);
+    cursor: pointer;
+}
+
+#next {
+   right: -1.1em;
+}
+
+#prev {
+    left: -1.1em;
+}
+
+.review-container p {
+    color: rgb(46, 17, 51);
+    padding-bottom: 1rem;
+    text-align: center;
+    font-size: 0.9em;
+    line-height: 2em;
+    letter-spacing:  0.05em;
+}
+
+#rev-img {
+    width: 30vh;
+    height: 30vh;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.review-container h3 {
+    color: #a993ff;
+    margin-top: 1rem;
+    font-size: 1em;
+    text-align: center;
+}
+
+.review-container h6 {
+    color: #4115f4;
+    margin-top: 1rem;
+    font-size: 0.9em;
+    letter-spacing: 0.03em;
+    font-weight: 400;
+    text-align: center;
+}
+
+/* ------------ styling sub boxes */
+
+.sub-type {
+    background: #5056be;
+    width: 90%;
+    color: azure;
+    font-size: 2rem;
+    text-transform: uppercase;
+    padding: 12px 20px;
+    border-radius: 1.2rem;
+    text-align: center;
+    position: absolute;
+    top: -1.2rem;
+    right: -1.7rem;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+                rgba(0, 0, 0, 0.19) 0px 6px 6px;
+    transition: all .2s ease-in-out; 
+}
+
+.content {
+    transform: skewY(8deg);
+}
+
+.title {
+    font-weight: 400;
+    font-size: 3rem;
+}
+
+.price {
+    position: relative;
+}
+
+.price .value {
+    font-size: 2.9rem;
+}
+
+.price .sign, 
+.price .cent {
+    font-size: 1.5rem;
+}
+
+.duration {
+    margin-top: -0.8rem;
+    text-align: right;
+}
+
+.tier-list {
+    margin-top: 0.8rem;
+}
+
+.tier-list li {
+    margin-bottom: 0.15rem;
+}
+
+.sub-btn {
+    position: absolute;
+    bottom: 1.8rem;
+    background: #6045ea;
+    color: azure;
+    border: none;
+    outline: none;
+    width: 50%;
+    font-size: 1.2rem;
+    padding: 0.10rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    transition: all .2s ease-in-out; 
+}
+
+.sub-card:hover {
+    background: #5056be;
+    color: azure;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px;
+}
+
+.sub-card:hover .sub-type,
+.sub-card:hover button {
+    background: azure;
+    color: #5056be; 
+}
