--- a/assets/stylingcss/style.css
+++ b/assets/stylingcss/style.css
@@ -737,4 +737,141 @@ cursor: pointer;
     display: none;
 }
 
+/* ------------------ Login & Register page*/
+
+.log-reg-container {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #820ea2;
+    padding: 5rem;
+  }
+  .log-reg-wrapper {
+    position: relative;
+    max-height: 560px;
+    max-width: 470px;
+    width: 100%;
+    border-radius: 12px;
+    padding: 20px 30px 120px;
+    background: #b007b0;
+    box-shadow: 0 5px 10px rgba( 0, 0, 0, 0.1);
+    overflow: hidden;
+  }
+  .form.login {
+    position: absolute;
+    left: 50%;
+    bottom: -90%;
+    transform: translateX(-50%);
+    width: calc(100% + 220px);
+    padding: 20px 140px;
+    border-radius: 50%;
+    height: 100%;
+    background: #fff;
+    transition: all 0.6s ease;
+  }
+  .log-reg-wrapper.active
+  .form.login {
+    bottom: -15%;
+    border-radius: 35%;
+    box-shadow: 0 -5px
+      10px rgba(0, 0, 0, 0.1);
+  }
+  .form h1 {
+    font-size: 30px;
+    text-align: center;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  .form.login h1 {
+    color: #333;
+    opacity: 0.6;
+  }
+  .log-reg-wrapper.active
+    .form.login h1 {
+    opacity: 1;
+  }
+  .log-reg-wrapper.active
+    .register h1 {
+    opacity: 0.6;
+  }
+  .log-reg-wrapper .log-reg-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 40px;
+  }
+  
+  .log-reg-form input {
+    height: 60px;
+    outline: none;
+    border: none;
+    padding: 0 15px;
+    font-size: 16px;
+    font-weight: 700;
+    border-radius: 8px;
+    background: #d432e3;
+    color: rgb(84, 246, 63);
+    cursor: pointer;
+  }
+  .log-reg-form input::placeholder {
+    color: white;
+  }
+
+  #modal-register-btn {
+    color: white;
+  }
+
+  .form.login
+    input {
+    border: 1px solid #aaa;
+  }
+  .form.login
+    input:focus {
+    box-shadow: 0 1px 0 #ddd;
+  }
+  .log-reg-form .checkbox {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .checkbox
+    input {
+    height: 16px;
+    width: 16px;
+    accent-color: #c12cd8;
+    cursor: pointer;
+  }
+  .log-reg-form .checkbox label {
+    cursor: pointer;
+    color: #f460ea;
+  }
+  .log-reg-form a {
+    color: #333;
+    text-decoration: none;
+  }
+  .log-reg-form a:hover {
+    text-decoration: underline;
+  }
+  
+  .log-reg-form input .log-btn {
+    margin-top: 15px;
+    padding: 0;
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+  }
+
+#log-btn {
+    color: white;
+}
+
+  .form.login
+    input .log-btn {
+    background: #dc1aee;
+    color: #fff;
+    border: none;
+  }
 
