--- a/assets/stylingcss/style.css
+++ b/assets/stylingcss/style.css
@@ -875,3 +875,144 @@ cursor: pointer;
     border: none;
   }
 
+  /*------------------------------------------ Responsivness*/
+/*------------------------- Large screens */
+
+@media (max-width: 1000px) {
+    section {
+        display: block;
+    }
+    .sub-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    .sub-card {
+        width: 80%;
+        margin: auto;
+    }
+}
+@media screen and (min-width: 768px) {
+    section {
+      padding: 1em 5em;
+    }
+  }
+  
+  @media screen and (min-width: 992px) {
+    section {
+      padding: 1em;
+    }
+    .card {
+      padding: 5em 1em;
+    }
+    .column {
+      flex: 33.33%;
+      max-width: 33.33%;
+      padding: 0 1em;
+    }
+    #accordion-container {
+        padding: 40px 20px;
+      }
+    
+      #accordion-wrapper #img-box {
+        height: 360px;
+        width: 220px;
+      }
+    
+      #accordion-wrapper {
+        max-width: 100%;
+        padding: 45px 60px 45px 60px;
+      }
+    
+      #accordion-wrapper #accordion-txt {
+        width: 70%;
+      }
+}
+
+@media (max-width: 1535px) {
+    header {
+        padding: 15px 3%;
+        transition: 0.1s;
+    }
+    
+}
+
+@media (max-width: 1460px) {
+    section {
+        padding: 0 12%;
+        transition: 0.1s;
+    }
+}
+
+@media (max-width: 1340px) {
+    #hero-img img {
+        width: 50vh;
+        height: auto;
+    }
+    #hero-txt h1 {
+        font-size: 75px;
+        margin: 0 0 30px;
+    }
+    #hero-txt h3 {
+        margin-bottom: 25px;
+    }
+} 
+
+@media (max-width: 1195px) {
+    section {
+        padding: 0 3%;
+        transition: 0.1s;
+    }
+    #hero-txt {
+        padding-top: 115px;
+    }
+    #hero-img {
+        text-align: center;
+    }
+    #hero-img img {
+        width: 50vh;
+        height: auto;
+    }
+    #hero-container {
+        height: 100%;
+        gap: 1rem;
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (min-width: 1001px) {
+    section {
+        display: block;
+    }
+    .sub-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
+    .sub-card {
+        width: 25%;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 1535px) and (min-width: 1195px) {
+    #monster-img img {
+        width: 40vh;
+        height: 40vh;
+        margin: 1rem;
+    }
+  }
+
+  @media screen and (max-width: 1194px) {
+    
+    #hero-img  { 
+        margin-bottom: 1.25rem;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+    
+    #monster-img {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+  }
