--- a/assets/stylingcss/piano.css
+++ b/assets/stylingcss/piano.css
@@ -47,3 +47,106 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+/*-------------------------- Metronome */
+#metronome {
+    flex-grow: 1;
+    background: purple;
+    border-top: 5px solid black;
+    border-left: 5px solid black;
+    border-bottom: 5px solid black;
+    max-width: 40rem;
+    height: 9rem;
+}
+
+#metro-content {
+    margin: 0.5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: space-around;
+}
+/*--------------------------------- Tempo section */
+#tempo h5 {
+    text-align: center;
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
+    color: rgb(254, 4, 254);
+}
+
+#tempo-input {
+    width: 2rem;
+    text-align: center;
+    margin-left: 4px;
+    margin-right: -4px;
+}
+
+.tempo-btn {
+    border: 1px ridge rgb(254, 4, 254);
+    border-radius: 50%;
+    width: 1rem;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    color: rgb(254, 4, 254);
+    transform: translateX(4.1px);
+}
+/*--------------------------------- Play and pause button section */
+#play-pause {
+    border: 2px solid;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    line-height: 57px;
+    color: rgb(254, 4, 254);
+    border-color: rgb(254, 4, 254) ;
+    margin-top: 0.5rem;
+    cursor: pointer;
+}
+
+#play-pause:active {
+    color: rgb(176, 19, 176);
+    border-color: rgb(176, 19, 176);
+}
+/*--------------------------------- Time signature section */
+#time-signature {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    padding-bottom: 0.3rem;
+}
+
+#time-signature h5 {
+    text-align: center;
+    line-height: 1.7rem;
+    color: rgb(254, 4, 254);
+}
+
+#btn-container {
+    display: flex;
+    margin-bottom: 1rem;
+    margin-top: 0.25rem;
+}
+
+#increase-measure {
+    margin-right: 0.2rem;
+}
+
+#decrease-measure {
+    margin-left: 0.2rem;
+}
+
+.measure-btn {
+    border: 1px ridge rgb(254, 4, 254);
+    border-radius: 10%;
+    width: 1rem;
+    text-align: center;
+    cursor: pointer;
+    color: rgb(254, 4, 254);
+}
+
+#measure-input {
+    width: 2rem;
+    text-align: center;
+    margin-left: 4px;
+    margin-right: 4px;
+}
