--- a/assets/stylingcss/piano.css
+++ b/assets/stylingcss/piano.css
@@ -266,3 +266,25 @@ input::-webkit-inner-spin-button {
     box-shadow: inset -5px 5px 20px rgba(0,0,0,0.1);
     background: linear-gradient( to bottom, #000000 0%, #676565 100%);
 }
+
+/* notes visibility and appearance */
+#piano-keyboard span {
+    position: absolute;
+    bottom: 1rem;
+    width: 100%;
+    text-align: center;
+    font-size: 1.13rem;
+    text-transform: uppercase;
+}
+
+.key-black span {
+    color: #fa78fa;
+}
+
+.key-white span {
+    color: #000000;
+}
+
+.hide span {
+    display: none;
+}
