register top padding updated

--- a/assets/stylingcss/style.css
+++ b/assets/stylingcss/style.css
@@ -745,7 +745,7 @@ cursor: pointer;
     align-items: center;
     justify-content: center;
     background: #820ea2;
-    padding: 5rem;
+    padding-top: 8rem;
   }
   .log-reg-wrapper {
     position: relative;
